--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "phaser3-project-template",
+  "name": "game",
   "version": "1.1.2",
-  "description": "A Phaser 3 Project Template",
+  "description": "A Phaser 3 Game Project",
   "main": "src/index.js",
   "scripts": {
     "build": "webpack --config webpack/prod.js ",
@@ -22,6 +22,7 @@
     "@babel/core": "^7.7.2",
     "@babel/preset-env": "^7.7.1",
     "babel-loader": "^8.0.6",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "clean-webpack-plugin": "^3.0.0",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
